# contact_manager_gtk

./: .gitignore  CMakeLists.txt
include/: address.h  address_object.h  contact.h  contact_object.h  main_window.h  model.h  phone.h  phone_object.h  phonebook.h  phonebook_manager.h  phonebook_object.h  util.h
include/ui/: contact_detail_window.h  contact_manager_window.h  contacts_view.h  main_window.h  phonebook_manager_window.h  phonebooks_view.h
src/: address.c  address_object.c  contact.c  contact_object.c  main.c  main_window.c  model.c  phone.c  phone_object.c  phonebook.c  phonebook_manager.c  phonebook_object.c  util.c
src/ui/: contact_detail_window.c  contact_detail_window.ui  contact_manager_window.c  contact_manager_window.ui  contacts_view.c  contacts_view.ui  main_window.c  main_window.ui  phonebook_manager_window.c  phonebook_manager_window.ui  phonebooks_view.c  phonebooks_view.ui  resources.xml
